--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
 }
 body{
     background-color: rgb(151, 195, 238);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
     color: rgb(58, 57, 57);   
     max-width: 900px;
     margin: 0 auto 0 auto;
-    padding: 10px;
+    padding: 0px;
 }
 section{
-    border: 1px solid red;
+    
+    padding: 0 15px 0 15px;
 }
 a{
     text-decoration: none;
@@ -30,7 +31,7 @@ a:visited{
     margin: 30px auto auto auto;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
 }
 .itens{
     display: flex;
@@ -40,7 +41,7 @@ a:visited{
     align-items: center;
 }
 .itens h2{
-    font-size: 20px;
+    font-size: 17px;
 }
 p{
     text-align: justify;
@@ -52,6 +53,38 @@ img{
     width: 200px;
     border-radius: 20%;
 }
+.git{
+    max-width: 25px;
+    margin-left: 5px;
+}
+.link{
+    max-width: 25px;
+    margin-left: 5px;
+}
 div.flex-container{
     background-color: white;
+    margin: 0 auto 0 auto;
+    border: 1px solid white;
+    height: 100vh;
+    flex-direction: column;
+
+}
+.flex-item-footer{
+    justify-content: space-around;  
+    align-content: space-around;
+    
+}
+.item-footer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 10px;
+}
+.sub-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin: 5px;
 }
